--- a/public/scripts/css.css
+++ b/public/scripts/css.css
@@ -1,76 +1,62 @@
-*, *:after, *:before {
-	box-sizing: border-box;
-}
-
-/*
-the animation here is for the opacity effect on the text content (ie. ON or OFF)
-*/
-@keyframes change-content {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
-}
-
+/* The switch - the box around the slider */
 .switch {
-  position: absolute;
-	/* make the checkbox unvisible using clip-path */
-  clip-path: circle(0%);
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
 
+/* Hide default HTML checkbox */
+.switch input {
   opacity: 0;
-  & + label {
-    display: inline-block;
-    margin: 20px;
-    width: 140px;
-    height: 60px;
-    position: relative;
+  width: 0;
+  height: 0;
+}
 
-    border: 2px solid #607d8b;
-    border-radius: 30px;
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
 
-    cursor: pointer;
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
 
-    font-size: 40px;
-		text-align: center;
+input:checked + .slider {
+  background-color: #2196F3;
+}
 
-    &:before, &:after {
-      display: inline-block;
-      position: absolute;
-    }
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
 
-		/* for slider thumb */
-    &:before {
-      content: '';
-      width: 46px;
-      height: 46px;
-      border-radius: 25px;
-      left: 5px;
-      top: 5px;
-      background: #607d8b;
-      transition: all 0.3s ease-in-out;
-    }
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
 
-		/* for text content */
-    &:after {
-      display: inline-block;
-      content: 'UKÁŽ';
-      bottom: -60px;
-			/* to center it horizontally */
-      left: 50%;
-      transform: translateX(-50%);
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
 
-			color: #607d8b;
-    }
-  }
-
-  &:checked {
-
-    & + label:before {
-      left: 85px;
-    }
-
-    & + label:after {
-      content: 'SKRY';
-			color: #4caf50;
-			animation: change-content 0.3s forwards linear;
-    }
-  }
+.slider.round:before {
+  border-radius: 50%;
 }
